// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Gif Expert App component should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Kimetsu no yaiba"
      key="Kimetsu no yaiba"
    />
  </ol>
</Fragment>
`;

exports[`Tests for Gif Expert App component should show app correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
